// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template render custom css render well with snapshot 1`] = `
<styled.div
  duplicated={false}
  style={
    Object {
      "color": "red",
    }
  }
>
  <div />
  <styled.div />
  <div />
  <AddButton
    handleModal={[Function]}
  />
</styled.div>
`;

exports[`Template renders with snapshot 1`] = `
<styled.div
  duplicated={false}
  style={Object {}}
>
  <div />
  <styled.div />
  <div />
  <AddButton
    handleModal={[Function]}
  />
</styled.div>
`;
